--- a/app/src/main/res/layout/instructor_detail_fragment.xml
+++ b/app/src/main/res/layout/instructor_detail_fragment.xml
@@ -6,18 +6,45 @@
     android:orientation="vertical"
     android:weightSum="1">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bottom_img" />
 
     <LinearLayout
         android:id="@+id/circleInstructorLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/padding_common_10"
+        android:weightSum="1">
 
-        <com.ymca.CustomFont.RoundedImage
-            android:id="@+id/circleInstructorImg"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/blog_icon" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".02"
+            android:background="@color/colorPrimary" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".97"
+            android:gravity="center">
+
+            <com.ymca.CustomFont.RoundedImage
+                android:id="@+id/circleInstructorImg"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/blog_icon" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".02"
+            android:background="@color/colorPrimary" />
     </LinearLayout>
 
     <com.ymca.CustomFont.PrimaryFontText
@@ -39,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructorName"
-        android:background="@drawable/classes_bg"
+        android:background="@drawable/classes_short_bg"
         android:drawableLeft="@drawable/arrow_gray"
         android:drawablePadding="@dimen/padding_common_5"
         android:gravity="center_vertical"
@@ -55,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/expTag"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
     </LinearLayout>
 
@@ -65,7 +92,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/experienceLayout"
-        android:background="@drawable/classes_bg"
+        android:background="@drawable/classes_short_bg"
         android:drawableLeft="@drawable/arrow_gray"
         android:drawablePadding="@dimen/padding_common_5"
         android:gravity="center_vertical"
@@ -76,22 +103,28 @@
         android:textStyle="bold"
         app:fontNames="@string/custom_primary_font" />
 
-    <LinearLayout
-        android:id="@+id/certificateLayout"
+    <ScrollView
+        android:id="@+id/certificateLayoutScroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/certificationTag"
-        android:orientation="horizontal">
+        android:layout_height="120dp"
+        android:layout_below="@+id/certificationTag">
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/certificateLayout"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:orientation="vertical">
+
+        </LinearLayout>
+    </ScrollView>
 
     <com.ymca.CustomFont.PrimaryFontText
 
         android:id="@+id/funFactTag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/certificateLayout"
-        android:background="@drawable/classes_bg"
+        android:layout_below="@+id/certificateLayoutScroll"
+        android:background="@drawable/classes_short_bg"
         android:drawableLeft="@drawable/arrow_gray"
         android:drawablePadding="@dimen/padding_common_5"
         android:gravity="center_vertical"
