--- a/app/src/main/res/layout/custom_layout_back_button.xml
+++ b/app/src/main/res/layout/custom_layout_back_button.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <LinearLayout
@@ -19,7 +20,7 @@
             android:src="@drawable/bt_back_white" />
     </LinearLayout>
 
-    <TextView
+    <com.ymca.CustomFont.PrimaryFontText
         android:id="@+id/logoText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,11 +30,14 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_toRightOf="@+id/customLayout"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:paddingRight="@dimen/padding_common_20"
         android:singleLine="true"
         android:text="adfg"
         android:visibility="gone"
+        android:textColor="@color/colorScheduleBottomUnSelect"
+        app:fontName="@string/custom_primary_font"
+        android:textSize="@dimen/text_size_common_22"
         />
 
 
