--- a/app/src/main/res/layout/date_fragment.xml
+++ b/app/src/main/res/layout/date_fragment.xml
@@ -92,7 +92,8 @@
             android:text="@string/no_record"
             android:textSize="@dimen/text_size_common_22"
             android:textStyle="bold"
-            app:fontName="@string/custom_primary_font"/>
+            app:fontName="@string/custom_primary_font"
+            android:visibility="gone"/>
 
         <com.ymca.PullListLoader.XListView
             android:id="@+id/dateScheduleListView"
@@ -101,7 +102,9 @@
             android:choiceMode="singleChoice"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:smoothScrollbar="true" />
+            android:smoothScrollbar="true"
+            android:divider="@null"
+            android:dividerHeight="0dp" />
 
 
     </RelativeLayout>
