--- a/app/src/main/res/layout/home_classes_fragment.xml
+++ b/app/src/main/res/layout/home_classes_fragment.xml
@@ -93,16 +93,19 @@
             android:text="@string/no_record"
             android:textSize="@dimen/text_size_common_22"
             android:textStyle="bold"
-            app:fontName="@string/custom_primary_font"/>
+            app:fontName="@string/custom_primary_font"
+            android:visibility="gone"/>
 
         <com.ymca.PullListLoader.XListView
-            android:id="@+id/dateScheduleListView"
+            android:id="@+id/homeClassListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:choiceMode="singleChoice"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:smoothScrollbar="true" />
+            android:smoothScrollbar="true"
+            android:divider="@null"
+            android:dividerHeight="0dp"/>
 
 
     </RelativeLayout>
