--- a/app/src/main/res/layout/home_classes_item.xml
+++ b/app/src/main/res/layout/home_classes_item.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/classes_bg"
         android:orientation="horizontal"
         android:padding="@dimen/padding_common_5"
         android:weightSum="1"
-        android:background="@drawable/classes_bg">
+        android:id="@+id/bgLayout"
+        android:focusable="false">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight=".15"
             android:background="@drawable/bg_bt_left"
+            android:gravity="center"
             android:src="@mipmap/ic_launcher"
-            android:gravity="center">
+            android:focusable="false">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/timer_class_icon" />
+                android:src="@drawable/timer_class_icon"
+                android:focusable="false"/>
         </LinearLayout>
 
         <LinearLayout
@@ -35,6 +39,7 @@
             android:orientation="vertical">
 
             <com.ymca.CustomFont.PrimaryFontText
+                android:id="@+id/homeClassName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -42,16 +47,19 @@
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/text_size_common_16"
                 android:textStyle="bold"
-                app:fontName="@string/custom_primary_font"/>
+                app:fontName="@string/custom_primary_font"
+                android:focusable="false" />
 
             <com.ymca.CustomFont.SecondaryFontText
+                android:id="@+id/homeClassDayDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:text="Cricket Game Class"
                 android:textColor="@color/colorScheduleBottomUnSelect"
+                android:textSize="@dimen/text_size_common_13"
                 app:fontNames="@string/custom_secondary_font"
-                android:textSize="@dimen/text_size_common_13"/>
+                android:focusable="false" />
 
         </LinearLayout>
 
@@ -61,16 +69,19 @@
             android:layout_weight=".22"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="@dimen/padding_common_8">
+            android:weightSum="1">
 
             <com.ymca.CustomFont.SecondaryFontText
+                android:id="@+id/homeClassTime"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight=".5"
                 android:background="@drawable/classes_button_bg_purple"
                 android:gravity="center"
                 android:text="10:30"
                 android:textColor="@android:color/white"
-                app:fontNames="@string/custom_secondary_font"/>
+                app:fontNames="@string/custom_secondary_font"
+                android:focusable="false"/>
 
         </LinearLayout>
 
@@ -78,12 +89,14 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight=".10"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:focusable="false">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/arrow_black" />
+                android:src="@drawable/arrow_black"
+                android:focusable="false" />
         </LinearLayout>
     </LinearLayout>
 
