--- a/app/src/main/res/layout/instructor_fragment.xml
+++ b/app/src/main/res/layout/instructor_fragment.xml
@@ -22,7 +22,8 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".98" />
+        android:layout_weight=".98"
+        />
 
 
     <View
