--- a/app/src/main/res/layout/instructor_items.xml
+++ b/app/src/main/res/layout/instructor_items.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_common_5"
     android:orientation="vertical">
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="120dp"-->
-        <!--android:layout_height="120dp">-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -26,15 +28,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
                 android:background="@color/colorTransParent"
                 android:gravity="center"
                 android:padding="@dimen/padding_common_5"
                 android:text="Suzy"
                 android:textColor="@android:color/white"
-                app:fontName="@string/custom_primary_font"
                 android:textSize="@dimen/text_size_common_16"
-                android:layout_centerHorizontal="true"/>
+                app:fontName="@string/custom_primary_font" />
 
         </RelativeLayout>
+    </android.support.v7.widget.CardView>
     <!--</LinearLayout>-->
-</android.support.v7.widget.CardView>
+</LinearLayout>
