--- a/app/src/main/res/layout/location_fragment.xml
+++ b/app/src/main/res/layout/location_fragment.xml
@@ -46,8 +46,10 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:smoothScrollbar="true"
-            android:dividerHeight="2dp"
-            android:divider="@android:color/white"/>
+            android:dividerHeight="0dp"
+            android:divider="@android:color/white"
+
+            />
 
 
     </RelativeLayout>
