--- a/app/src/main/res/layout/my_card_items.xml
+++ b/app/src/main/res/layout/my_card_items.xml
@@ -4,13 +4,15 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:focusable="false">
 
     <ImageView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight=".2"
-        android:src="@drawable/arrow_next" />
+        android:src="@drawable/arrow_next"
+        android:focusable="false"/>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -33,7 +35,8 @@
             android:gravity="center_vertical"
             app:fontName="@string/custom_primary_font"
             android:textSize="@dimen/text_size_common_18"
-            android:id="@+id/cardUserName"/>
+            android:id="@+id/cardUserName"
+            android:focusable="false"/>
 
         <com.ymca.CustomFont.PrimaryFontText
             android:layout_width="match_parent"
@@ -46,7 +49,8 @@
             app:fontName="@string/custom_primary_font"
             android:textSize="@dimen/text_size_common_12"
             android:id="@+id/cardBarCodeNo"
-            android:paddingRight="@dimen/padding_common_5"/>
+            android:paddingRight="@dimen/padding_common_5"
+            android:focusable="false"/>
     </LinearLayout>
 
 
