--- a/app/src/main/res/layout/notification_fragment.xml
+++ b/app/src/main/res/layout/notification_fragment.xml
@@ -2,10 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <include layout="@layout/custom__back_button_actionbar"/>
-
+    <!--<include layout="@layout/custom__back_button_actionbar"/>-->
+    <com.ymca.CustomFont.PrimaryFontText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/padding_common_10"
+        android:text="@string/announcement"
+        android:textAllCaps="true"
+        android:gravity="center_vertical"
+        android:textColor="@color/colorScheduleBottomUnSelect"
+        android:textSize="@dimen/text_size_common_22"
+        android:textStyle="bold"
+        app:fontName="@string/custom_primary_font"/>
 
     <ListView
         android:layout_width="match_parent"
